--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
   "scripts": {},
   "env": {
     "HEROKU_APP_NAME": {
-      "required": true
+      "required": false
     }
   },
   "formation": {},
