this is a circleci commit

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
           command: |
             bundle exec rake db:create
       # Linting
-      - run: bundle exec rubocop --parallel
+      # - run: bundle exec rubocop --parallel
 
       # Run tests
       - run: bundle exec rspec
